--- a/login.html
+++ b/login.html
@@ -17,6 +17,9 @@
     </form>
     <p id="message"></p>
 </div>
+<div id="notification" class="notification">
+    
+</div>
 
 <script src="script.js"></script>
 </body>
