--- a/login.html
+++ b/login.html
@@ -18,7 +18,11 @@
     <p id="message"></p>
 </div>
 <div id="notification" class="notification">
-    
+    <p>Save Your Password</p>
+  <input type="text" id="users"></input>
+    <input type="password" id="passes"></input><br>
+    <button id="verify">Save</button>
+        <button id="verifynot">Not Now</button>
 </div>
 
 <script src="script.js"></script>
